# api-store

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: app-pipeline.yml  infrastructure-pipeline.yml
api/: main.py
api/store/: firestore.py  schema.py
deploy/: configMap.yaml  deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
docs/: ThreatModel.md  api-store-architecture-diagram-drawio.drawio  api-store-architecture.drawio  api-store-threatmodel.drawio
infrastructure/: config.store.tfbackend  main.tf  storage.tf  variables.tf  variables.tfvars
tests/: test_firestore.py  test_schema.py
