[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["David Akuma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
firebase-admin = "^6.5.0"
pytest = "^8.2.2"
mock-firestore = "^0.11.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
